# Project_A

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  project_a  project_a.pub
libs/easyx/include/: easyx.h
